bugfix on iphones SE

--- a/style.css
+++ b/style.css
@@ -140,6 +140,7 @@ footer{
 
     width: 100%;
     margin-bottom: 1rem;
+    margin-top: 3rem;
     text-align: center;
 }
 
